<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f4f4f4"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LogInActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/dealacc"
            android:contentDescription="@string/iv_logo" />

        <TextView
            android:id="@+id/login_tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/iv_logo"
            android:layout_marginTop="20dp"
            android:text="@string/login_tv_login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="15sp" />

        <AutoCompleteTextView
            android:id="@+id/login_actv_login"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/login_tv_login"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:editable="true"
            android:hint="@string/login_et_login"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textColor="#2c7da9"
            android:textColorHint="@color/hint_text_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_actv_login"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/login_et_password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="#2c7da9"
            android:textColorHint="@color/hint_text_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/login_tv_saveInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_et_password"
            android:layout_marginTop="20dp"
            android:text="@string/login_tv_saveInfo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Switch
            android:id="@+id/login_s_saveInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_tv_saveInfo"
            android:layout_alignEnd="@+id/login_et_password"
            android:layout_alignRight="@+id/login_et_password"
            android:checked="false" />

        <Button
            android:id="@+id/login_b_login"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/login_s_saveInfo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_blue"
            android:text="@string/login_b_login"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/home_account_ll_pictures_buttons"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_b_login"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/login_b_forgotPassword"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_grey"
                android:text="@string/login_b_forgotPassword"
                android:textAllCaps="false"
                android:textColor="#246a8e" />

            <Button
                android:id="@+id/login_b_contactUs"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_grey"
                android:text="@string/login_b_contactUs"
                android:textAllCaps="false"
                android:textColor="#246a8e" />

        </LinearLayout>


        <Button
            android:id="@+id/login_b_newUser"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/home_account_ll_pictures_buttons"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_grey"
            android:text="@string/login_b_newUser"
            android:textAllCaps="false"
            android:textColor="#246a8e" />

        <ImageView
            android:id="@+id/login_iv_login"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_alignBottom="@+id/login_actv_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/login_actv_login"
            android:background="@drawable/login" />

        <ImageView
            android:id="@+id/login_iv_password"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_alignBottom="@+id/login_et_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_actv_login"
            android:layout_marginTop="10dp"
            android:background="@drawable/password" />

        <TextView
            android:id="@+id/login_tv_footer"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/login_b_newUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/login_pb_login"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/login_s_saveInfo"
            android:layout_below="@+id/login_tv_login"
            android:layout_centerHorizontal="true"
            android:indeterminate="false"
            android:indeterminateDrawable="@drawable/progressbar" />

    </RelativeLayout>

</ScrollView>