<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.dealacceleration.ForgotPasswordActivity"
        android:background="#f4f4f4"
        android:id="@+id/rl_forgotPassword"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/forgotPassword_tv_message"
            android:id="@+id/forgotPassword_tv_message"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textSize="15sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:inputType="textEmailAddress"
            android:id="@+id/forgotPassword_et_email"
            android:hint="@string/forgotPassword_et_emailId"
            android:textColorHint="@color/hint_text_color"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="#2c7da9"
            android:paddingLeft="5dp"
            android:layout_below="@+id/forgotPassword_tv_message"
            android:layout_centerHorizontal="true"
            android:background="#ffffff" />

        <LinearLayout
            android:id="@+id/forgotPassword_ll_two_buttons"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="left"
            android:weightSum="2"
            android:layout_below="@+id/forgotPassword_et_email"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:id="@+id/forgotPassword_b_cancel"
                android:layout_width="0dp"
                android:textAllCaps="false"
                android:text="@string/forgotPassword_b_cancel"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginRight="2.5dp"
                android:background="@drawable/button_grey"
                android:textColor="#246a8e" />

            <Button
                android:id="@+id/forgotPassword_b_submit"
                android:layout_width="0dp"
                android:textAllCaps="false"
                android:text="@string/forgotPassword_b_submit"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:background="@drawable/button_blue"
                android:textColor="#ffffff" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>